# Django-Polls

./: README.md  db.sqlite3
django-polls/: README.rst  setup.cfg
django-polls/django_polls.egg-info/: PKG-INFO
django-polls/polls/: tests.py  views.py
django-polls/polls/migrations/: 0001_initial.py
django-polls/polls/templates/polls/: detail.html  index.html  results.html
mysite/: settings.py
polls/: admin.py  models.py  views.py
polls/templates/polls/: detail.html
